trustfall_derive/tests/ui/derive_struct.rs
use trustfall_derive::TrustfallEnumVertex;

#[derive(Debug, Clone, TrustfallEnumVertex)]
struct Vertex {
    content: i64,
}

fn main() {}
